# dagger

./: .env.example  .gitignore  CLAUDE.md  NOTICE  README.md  pyproject.toml
configs/: phase0.yaml  phase0_librimix.yaml  phase0_wsj0mix.yaml  phase1_librimix_3spk_eval.yaml  phase1_librimix_3spk_train.yaml  phase1_overfit4_diag.yaml  phase1_smoke.yaml  phase1_wsj0mix_2spk_eval.yaml  phase1_wsj0mix_2spk_train.yaml  phase2_librimix_3spk_eval.yaml
dagger/: __init__.py
dagger/audio/: __init__.py  provenance.py
dagger/data/: __init__.py  activity.py  audio_io.py  base.py  librimix.py  mixing.py  paths.py  torch_adapter.py  wsj0mix.py
dagger/diarize/: __init__.py  oracle.py
dagger/enroll/: __init__.py  encoder.py  topk.py
dagger/extract/: __init__.py  base.py  blind.py  crossattn.py  tfgridnet.py  tfgridnet_crossattn.py
dagger/gate/: __init__.py  artifact.py  confidence.py  enrollment.py  margin.py
dagger/losses/: __init__.py  pit.py  sisdr.py
dagger/metrics/: __init__.py  sisdr.py  speaker_similarity.py
dagger/reconstruct/: __init__.py  deflation.py  stitch.py
dagger/refine/: __init__.py  coarse_to_fine.py
results/: phase1_librimix_3spk.csv  phase1_librimix_3spk.md
scripts/: plot_phase2_depth.py  probe_phase1_conditioning.py  run_phase0.py  run_phase1.py  run_phase2.py  train_phase1.py
tests/: conftest.py  test_metrics.py  test_no_residual_in_audio_path.py  test_oracle_diarize.py  test_reconstruct.py
tests/phase0/: test_activity.py  test_audio_io.py  test_metrics_sisdr.py  test_mixing.py  test_oracle.py  test_reconstruct_stitch.py
tests/phase1/: test_enroll_topk.py  test_extract_base.py  test_extractors_torch.py  test_losses.py  test_speaker_similarity.py  test_torch_adapter.py
tests/phase2/: test_coarse_to_fine.py  test_deflation.py  test_depth_utils.py  test_gate.py  test_librimix_scheduled.py  test_scheduler.py  test_sisdr_by_depth.py
