[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagger"
version = "0.0.0"
description = "Diarization-guided, accumulation-free target speaker extraction."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "The dagger authors" }]
keywords = [
    "speech separation",
    "target speaker extraction",
    "speaker diarization",
]

# Phase 0 core stays numpy-only. The learning stack (torch, torchmetrics,
# pyannote.audio, wespeaker, whisper) is added phase-by-phase — see CLAUDE.md
# §3 and §5. Corpus I/O (soundfile + scipy) is the optional `data` extra so the
# core install stays light.
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Real-corpus loaders (LibriMix / WSJ0-2mix): read + resample source audio, and
# load DAGGER_* env vars from a local .env. Still numpy-only at runtime.
data = [
    "soundfile>=0.12",
    "scipy>=1.10",
    "python-dotenv>=1.0",
]
# Phase 1 learning stack: the speaker encoder phi (NeMo TitaNet-Large), the
# extractor G (an original TF-GridNet + cross-attention implementation, torch
# -only, no external TSE toolkit dependency -- see CLAUDE.md Phase 1 notes on
# WeSep/USEF-TSE licensing), and the eval-only encoder (WavLM via
# transformers, deliberately a different model from phi).
ml = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "transformers>=4.40",
    "nemo_toolkit[asr]",
]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/RohanBanerjee88/dagger"

[tool.setuptools.packages.find]
include = ["dagger*"]
